updated code for redis

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- with .Values.labels }}
     {{- toYaml . | nindent 4 }}
-    {{- end}}
+    {{- end }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -15,77 +15,35 @@ spec:
     matchLabels:
       {{- with .Values.labels }}
       {{- toYaml . | nindent 6 }}
-      {{- end}}
+      {{- end }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       labels:
         {{- with .Values.labels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       serviceAccountName: {{.Values.serviceAccount.name}}
       volumes:
         - name: redis-data
           persistentVolumeClaim:
             claimName: redis-pvc
-        - name: {{.Values.volume.name}}
-          {{- if .Values.secretObjects.name }}
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: {{ .Chart.Name }}-{{.Values.namespace}}-spc
-          {{- else }}
-          emptyDir: {}
-          {{- end }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}-container
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: redis-data
               mountPath: /data
-            - name: secret-volume
-              mountPath: /mnt/app/conf
-              secretName: ""
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
-            - name: DD_AGENT_HOST
+            - name: REDIS_PASSWORD
               valueFrom:
-                fieldRef:
-                  fieldPath: status.hostIP
-            - name: DD_ENV
-              value: {{.Values.namespace}}
-            - name: DD_SERVICE_NAME
-              value: {{.Chart.Name}}-{{.Values.namespace}}-eks
-            {{- if .Values.env }}
-            {{- range .Values.env }}
-            - name: {{ .name }}
-              value: {{ .value | quote }}
-            {{- end }}
-            {{- end }}
-          envFrom:
-            {{- if .Values.secretObjects.name }}
-            {{- range $key,$value := .Values.secretObjects.name }}
-            - secretRef:
-                name: {{$value}}
-            {{- end }}
-            {{- else }}
-            # No secrets to mount, skipping envFrom
-            {{- end }}
+                secretKeyRef:
+                  name: redis-secret
+                  key: REDIS_PASSWORD
+          args: ["--requirepass", "$(REDIS_PASSWORD)"]
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -98,4 +56,3 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      
