--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: coto-redis
-description: A Helm chart for Kubernetes
+description: A Helm chart for Kubernetes Redis per environment (dev, qa, preprod, prod)
+
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
