--- a/value-dev.yaml
+++ b/value-dev.yaml
@@ -19,7 +19,7 @@ service:
   port: 6379
 serviceAccount:
   create: false
-  name: ""
+  name: {{ .Values.env }}-sa
 volume:
   name: secret-volume
   mountPath: /mnt/app/conf
