--- a/value-prod.yaml
+++ b/value-prod.yaml
@@ -22,7 +22,7 @@ service:
   port: 6379
 serviceAccount:
   create: false
-  name: {{ .Values.env }}-sa
+  name: prod-sa
 volume:
   name: secret-volume
   mountPath: /mnt/app/conf
