--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -1,7 +1,9 @@
-
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }}
-  annotations:
-    eks.amazonaws.com/role-arn: {{ .Values.serviceAccount.roleArn | quote }}
+  namespace: {{ .Values.namespace }}
+  labels:
+    {{- include "your-chart.labels" . | nindent 4 }}
+{{- end }}
