updated code for redis

--- a/templates/spc.yaml
+++ b/templates/spc.yaml
@@ -8,7 +8,7 @@ spec:
   serviceAccountName: {{ .Values.serviceAccount.name }}
   parameters:
     objects: |
-      - objectName: "{{ .Values.namespace }}/coto-redis/config"
+      - objectName: "{{ .Values.namespace }}/coto-redis/CONFIG"
         objectType: secretsmanager
         objectAlias: "REDIS_PASSWORD"
   secretObjects:
