--- a/value-qa.yaml
+++ b/value-qa.yaml
@@ -17,9 +17,11 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 2
   targetCPUUtilizationPercentage: 80
+# Service Configuration
 service:
-  type: ClusterIP
-  port: 6379
+  enabled: true
+  type: ClusterIP  # or LoadBalancer if you want to expose the Redis service externally
+  port: 6379  
 serviceAccount:
   create: false
   name: qa-sa
