--- a/value-preprod.yaml
+++ b/value-preprod.yaml
@@ -17,9 +17,11 @@ autoscaling:
   minReplicas: 2
   maxReplicas: 4
   targetCPUUtilizationPercentage: 75
+# Service Configuration
 service:
-  type: ClusterIP
-  port: 6379
+  enabled: true
+  type: ClusterIP  # or LoadBalancer if you want to expose the Redis service externally
+  port: 6379  
 serviceAccount:
     create: false
     name: preprod-sa
